# spoot

./: .gitignore  CMakeLists----mac.txt  CMakeLists.txt  README.md  index.html  main.cpp  package-lock.json
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  Header.jsx  Home.jsx  Play.jsx  Results.jsx  Routes.js  index.js
frontend/src/components/Button/: Button.css  Button.jsx
frontend/src/components/Choice/: Choice.css  Choice.jsx
frontend/src/components/Header/: Header.css  Header.jsx
frontend/src/css/: App.css  Button.css  Header.css  Home.css  Play.css  Results.css
scripts/: redis-py.py
v1/: all.cpp  all.hpp
v2/: all.cpp  all.hpp
